Refactor controller tests to reduce duplication